--- a/app/src/main/res/layout/activity_recommendation_board.xml
+++ b/app/src/main/res/layout/activity_recommendation_board.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background01"
+    android:background="@drawable/background14"
     android:orientation="vertical"
-    tools:context=".RecommendationBoard">
+    tools:context=".RecommendationBoard"
+    android:id="@+id/rb_ll">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
