--- a/app/src/main/res/layout/activity_commu_home.xml
+++ b/app/src/main/res/layout/activity_commu_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CommuHomeActivity"
-    android:background="@drawable/background70">
+    android:background="@drawable/background01">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -16,9 +16,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"/>
 
-    </android.support.v7.widget.Toolbar>
 
 
     <android.support.v7.widget.RecyclerView
