--- a/app/src/main/res/layout/activity_constellation.xml
+++ b/app/src/main/res/layout/activity_constellation.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:background="@drawable/bg002"
+    android:background="@drawable/background06"
     tools:context=".Constellation">
 
     <android.support.v7.widget.Toolbar
@@ -17,21 +17,19 @@
         android:background="#00ffffff"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_centerInParent="true"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
     <TextView
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/cs_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="XX자리"
-        android:textSize="20dp"
-        android:textColor="#ffffff"
-        android:layout_marginTop="25dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         android:fontFamily="@font/seoulhangang"/>
+    </android.support.v7.widget.Toolbar>
 
 
     <ImageView
@@ -39,7 +37,7 @@
         android:layout_width="match_parent"
         android:id="@+id/cs_d_img"
         android:src="@drawable/c11"
-        android:layout_below="@id/cs_name"
+        android:layout_below="@id/my_toolbar"
         />
 
 
@@ -47,7 +45,7 @@
         android:id="@+id/cs_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="10dp"
         android:textColor="#ffffff"
         android:text="보이는 시각, 방향: XX시간 XX방향"
         android:layout_below="@id/cs_d_img"
@@ -58,19 +56,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/cs_view"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="30dp">
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="25dp">
         <TextView
             android:id="@+id/cs_story"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:text="설화: "
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:fontFamily="@font/seoulhangang"
-            android:lineSpacingExtra="15dip"/>
+            android:lineSpacingExtra="7dp"/>
     </ScrollView>
 
 
