레이아웃 약간 수정

--- a/app/src/main/res/layout/activity_recommendation_board.xml
+++ b/app/src/main/res/layout/activity_recommendation_board.xml
@@ -68,7 +68,7 @@
             android:id="@+id/recommendation_num"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:layout_toRightOf="@id/moon_btn"
             android:padding="6dp"
             android:text="0"
@@ -121,8 +121,9 @@
             android:id="@+id/filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:text=""
             android:textColor="@color/white"
             android:textSize="16sp"
